--- a/site/views/components/button.pug
+++ b/site/views/components/button.pug
@@ -53,7 +53,7 @@ block contents
                         button.ga-button.attention.outline Attention
                         button.ga-button.importance.outline Importance
                     .contents-wrapper
-                        button.ga-button.primary.active 메Primary인
+                        button.ga-button.primary.active Primary
                         button.ga-button.secondary.active Secondary
                     .footer
                         - var code = '<button class="ga-button { BRAND | STATUS }">Color</button>';
@@ -197,7 +197,7 @@ block contents
                         .ga-button.icon.round
                             i.xi-flight-on
                     .footer
-                        - var code = '<button class="ga-button icon">\n    <i class="fa fa-icon"></i>\n</button>'
+                        - var code = '<button class="ga-button icon">\n    <i class="xi-icon"></i>\n</button>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -226,8 +226,8 @@ block contents
                             | Right
                             i.icon.right.xi-angle-right
                     .footer
-                        - var code = '<button class="ga-button">\n    <i class="icon left fa fa-icon"></i>\n    Left\n</button>'
-                        - var code1 = '<button class="ga-button">\n    Right\n    <i class="icon right fa fa-icon"></i>\n</button>'
+                        - var code = '<button class="ga-button">\n    <i class="icon left xi-icon"></i>\n    Left\n</button>'
+                        - var code1 = '<button class="ga-button">\n    Right\n    <i class="icon right xi-icon"></i>\n</button>'
                             pre
                                 code.language-markup
                                     | #{code}
