--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -85,7 +85,7 @@ block contents
                         .ga-button.icon.round.edit-btn
                             i.xi-pen
                     .footer
-                        - var code = '<div class="ga-input edit">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button icon edit-btn">\n        <i class="fa fa-pen"></i>\n    </button>\n</div>'
+                        - var code = '<div class="ga-input edit">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button icon edit-btn">\n        <i class="xi-pen"></i>\n    </button>\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
@@ -158,9 +158,9 @@ block contents
                                     input(type="text", placeholder="Insert text")
                                     i.icon.xi-angle-up
                     .footer
-                        - var code = '<div class="ga-input icon left">\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
-                        - var code1 = '<div class="ga-input icon right link">\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
-                        - var code2 = '<div class="ga-input icon both">\n    <i class="fa fa-icon"></i>\n    <input type="text" placeholder="Insert text" />\n    <i class="fa fa-icon"></i>\n</div>'
+                        - var code = '<div class="ga-input icon left">\n    <input type="text" placeholder="Insert text" />\n    <i class="xi-icon"></i>\n</div>'
+                        - var code1 = '<div class="ga-input icon right link">\n    <input type="text" placeholder="Insert text" />\n    <i class="xi-icon"></i>\n</div>'
+                        - var code2 = '<div class="ga-input icon both">\n    <i class="xi-icon"></i>\n    <input type="text" placeholder="Insert text" />\n    <i class="xi-icon"></i>\n</div>'
                             pre
                                 code.language-markup
                                     | #{`<!-- Left -->`}
