--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -133,10 +133,10 @@ block contents
                                     .sub-title asdf
                     .footer
                         - var code_s = `<div class="ga-list">`
-                        - var code_c_1 = `    <div class="item">\n        <i class="list-icon icon fa fa-icon"></i>\n        <div class="item-title">option1</div>\n    </div>`
-                        - var code_c_2 = `    <div class="item">\n        <i class="list-icon icon fa fa-icon"></i>\n        <div class="item-title">option2</div>\n    </div>`
+                        - var code_c_1 = `    <div class="item">\n        <i class="list-icon icon xi-icon"></i>\n        <div class="item-title">option1</div>\n    </div>`
+                        - var code_c_2 = `    <div class="item">\n        <i class="list-icon icon xi-icon"></i>\n        <div class="item-title">option2</div>\n    </div>`
                         - var code_e = `    ...`
-                        - var code_c_3 = `    <div class="item">\n        <i class="list-icon icon fa fa-icon"></i>\n        <div class="item-title">option3</div>\n    </div>`
+                        - var code_c_3 = `    <div class="item">\n        <i class="list-icon icon xi-icon"></i>\n        <div class="item-title">option3</div>\n    </div>`
                         - var code_f = `</div>`
                             pre
                                 code.language-markup
