--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -26,12 +26,12 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination">`
-                        - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_1 = `          <div class="pagination-num"> {n} </div>`
                         - var code_c_2 = `          ... ...`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -64,16 +64,16 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination">`
-                        - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_1 = `          <div class="pagination-num"> 1 </div>`
-                        - var code_c_2 = `          <div class="pagination-num block-prev"><i class="fa fa-ellipsis" /></div>`
+                        - var code_c_2 = `          <div class="pagination-num block-prev"><i class="xi-ellipsis" /></div>`
                         - var code_c_3 = `          <div class="pagination-num"> {n} </div>`
                         - var code_c_e = `          ... ...`
-                        - var code_c_4 = `          <div class="pagination-num block-next"><i class="fa fa-ellipsis" /></div>`
+                        - var code_c_4 = `          <div class="pagination-num block-next"><i class="xi-ellipsis" /></div>`
                         - var code_c_5 = `          <div class="pagination-num"> {Last num} </div>`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -105,11 +105,11 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination number round">`
-                        - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_e = `          ... ...`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -141,11 +141,11 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination number">`
-                        - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_e = `          ... ...`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -169,11 +169,11 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination page">`
-                        - var code_c_l = `      <div class="pagination-nav pagination-item"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav pagination-item"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_e = `          <div class="pagination-info"> 1/10 </div>`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav pagination-item"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav pagination-item"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -200,11 +200,11 @@ block contents
                                 i.xi-angle-right
                     .footer 
                         - var code_s = `<div class="ga-pagination number compact">`
-                        - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_e = `          ... ...`
                         - var code_c_f = `      </div>`
-                        - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                        - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                         - var code_f = `  </div>`
                         pre 
                             code.language-markup 
@@ -254,11 +254,11 @@ block contents
                                 i.xi-angle-right
                     .footer 
                             - var code_s = `<div class="ga-pagination number align-{left | center | right}">`
-                            - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                            - var code_c_l = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                             - var code_c_s = `      <div class="pagination-page-wrapper">`
                             - var code_c_e = `          ... ...`
                             - var code_c_f = `      </div>`
-                            - var code_c_r = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
+                            - var code_c_r = `      <div class="pagination-nav"><i class="xi-chevron-left" /></div>`
                             - var code_f = `  </div>`
                             pre 
                                 code.language-markup 
