--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -27,7 +27,7 @@ block contents
                         - var code_s_1 = `<div class="ga-select-box dropdown">`
                         - var code_s_2 = `      <div class="select-item ga-input icon right">`
                         - var code_c_1 = `          <input type="text" readonly />`
-                        - var code_c_2 = `          <i class="icon fa fa-chevron-down">`
+                        - var code_c_2 = `          <i class="icon xi-chevron-down">`
                         - var code_f_2 = `      </div>`
                         - var code_s_3 = `      <div class="select-menu">`
                         - var code_s_4 = `          <div class="ga-list selection">`
@@ -68,7 +68,7 @@ block contents
                         - var code_s_1 = `<div class="ga-select-box float">`
                         - var code_s_2 = `      <div class="select-item ga-input icon right">`
                         - var code_c_1 = `          <input type="text" readonly />`
-                        - var code_c_2 = `          <i class="icon fa fa-chevron-down">`
+                        - var code_c_2 = `          <i class="icon xi-chevron-down">`
                         - var code_f_2 = `      </div>`
                         - var code_e= `     // select menu`
                         - var code_f_1 = `  </div>` 
@@ -99,7 +99,7 @@ block contents
                         - var code_s_1 = `<div class="ga-select-box">`
                         - var code_s_2 = `      <div class="select-item ga-input icon right copact">`
                         - var code_c_1 = `          <input type="text" readonly />`
-                        - var code_c_2 = `          <i class="icon fa fa-chevron-down">`
+                        - var code_c_2 = `          <i class="icon xi-chevron-down">`
                         - var code_f_2 = `      </div>`
                         - var code_e= `     // select menu`
                         - var code_f_1 = `  </div>` 
@@ -131,7 +131,7 @@ block contents
                         - var code_e= `             ... ...` 
                         - var code_c_2 = `           <option value="value"> OPTION n</option>`
                         - var code_f_2 = `      </select>`
-                        - var code_c_3= `       <i class="icon fa fa-chevron-down" />`
+                        - var code_c_3= `       <i class="icon xi-chevron-down" />`
                         - var code_f_1 = `  </div>` 
                         pre 
                             code.language-markup 
@@ -163,7 +163,7 @@ block contents
                         - var code_e= `             ... ...` 
                         - var code_c_2 = `           <option value="value"> OPTION n</option>`
                         - var code_f_2 = `      </select>`
-                        - var code_c_3= `       <i class="icon fa fa-chevron-down" />`
+                        - var code_c_3= `       <i class="icon xi-chevron-down" />`
                         - var code_f_1 = `  </div>` 
                         pre 
                             code.language-markup 
