--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -154,10 +154,10 @@ block contents
                     .footer
                         - var code_1_s = `<div class="ga-tabs browser">`
                         - var code_2_s = `      <div class="tab-menu">`
-                        - var code_c_1 = `          <div class="tab-item tab active">\n             <span class="tabText ellipsis">Item 1</span>\n             <span class="btn-close"><i class="fa fa-colse" /></span>\n          </div>`
-                        - var code_c_2 = `          <div class="tab-item tab">\n            <span class="tabText ellipsis">Item 2</span>\n            <span class="btn-close"><i class="fa fa-colse" /></span>\n          </div>`
+                        - var code_c_1 = `          <div class="tab-item tab active">\n             <span class="tabText ellipsis">Item 1</span>\n             <span class="btn-close"><i class="xi-colse" /></span>\n          </div>`
+                        - var code_c_2 = `          <div class="tab-item tab">\n            <span class="tabText ellipsis">Item 2</span>\n            <span class="btn-close"><i class="xi-colse" /></span>\n          </div>`
                         - var code_e = `            ...`
-                        - var code_c_3 = `          <div class="tab-item tab">\n            <span class="tabText ellipsis">Item N</span>\n            <span class="btn-close"><i class="fa fa-colse" /></span>\n          </div>`
+                        - var code_c_3 = `          <div class="tab-item tab">\n            <span class="tabText ellipsis">Item N</span>\n            <span class="btn-close"><i class="xi-colse" /></span>\n          </div>`
                         - var code_2_f = `      </div>`
                         - var code_1_f = `  </div>`
                         pre 
