--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -6,8 +6,8 @@ html
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         include seo_meta
-        link(rel="shortcut icon", href="/favicon.ico", type="image/x-icon")
-        link(rel="icon", href="/favicon.ico", type="image/x-icon")
+        link(rel="shortcut icon", href="img/frog-profile.svg", type="image/x-icon")
+        //- link(rel="icon", href="/favicon.ico", type="image/x-icon")
         block title
         link(rel="preconnect", href="https://cdn.jsdelivr.net", crossorigin="anonymous")
         link(rel="preload",
