--- a/site/public/css/reset.css
+++ b/site/public/css/reset.css
@@ -11,6 +11,7 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
+	appearance: none;
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -44,4 +45,8 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+button {
+	appearance: none;
+	font: inherit;
 }
